Adicionado links github e linkedin

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         <aside class="menu-lateral">
             <ul>
                 <li>
-                    <a href="#" target="_blank">
+                    <a href="https://github.com/johnitobias" target="_blank">
                         <img src="src/img/github.svg" alt="icone-github" class="icone">
                     </a>
                     
                 </li>
                 <li>
-                    <a href="#" target="_blank">
+                    <a href="https://www.linkedin.com/in/johni-tobias-gutbier/" target="_blank">
                         <img src="src/img/linkedin-in.svg" alt="icone-linkedin" class="icone">
                     </a>
                 </li>
